sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:15: error: not found: value len
    while (i+gap < len) {
                   ^