sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var gap = getValueCount();
  var swapped = false;;
  
  do {
    swapped = false;
    
    if (gap > 1) {
      gap = (gap.asInstanceOf[Double] / 1.3).asInstanceOf[Int];
    }
    
    var i = 0;
    
    while (i+gap < len) {
      if (isSmaller(i+gap, i)) {
        swap(i, i+gap);
      }
      i += 1;
    }
  } while (swapped || gap > 1);
}